--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
 #################################################################
 ###################### Hexo Configuration #######################
 #################################################################
+#################################################################
 
 title: NexT
 
-keywords: "Hexo, NexT"
+keywords: "Hexo, NexTT"
 
 language: en
 
