--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 #################################################################
-###################### Hexo Configuration #######################
+###################### Hexo AAA #######################
 #################################################################
 #################################################################
 
